Create VPC Cloudformation.json
{  
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"VPC template with private, public subnets, internet gateway and NAT",
   "Parameters":{  
      "SshKeyName":{  
         "Description":"SSH key name for EC2 instances",
         "Type":"String"
      }
   },
   "Mappings":{  
      "SubnetConfig":{  
         "VPC":{  
            "CIDR":"10.1.0.0/16"
         },
         "SubnetAZ1a":{  
            "CIDR":"10.1.0.0/24"
         },
         "SubnetAZ1b":{  
            "CIDR":"10.1.1.0/24"
         },
         "SubnetAZ1c":{  
            "CIDR":"10.1.2.0/24"
         },
         "SubnetAZ1d":{  
            "CIDR":"10.1.3.0/24"
         },
         "SubnetAZ1e":{  
            "CIDR":"10.1.4.0/24"
         }
      }
   },
   "Resources":{  
      "VPC":{  
         "Type":"AWS::EC2::VPC",
         "Properties":{  
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "VPC",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Public"
               },
               {  
                  "Key":"Name",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               }
            ]
         }
      },
      "PrivateSubnetAZ1a":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "AvailabilityZone":"us-east-1a",
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "SubnetAZ1a",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Name",
                  "Value":"PrivateSubnetAZ1a"
               }
            ]
         }
      },
      "PrivateSubnetAZ1b":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "AvailabilityZone":"us-east-1b",
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "SubnetAZ1b",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Name",
                  "Value":"PrivateSubnetAZ1b"
               }
            ]
         }
      },
      "PrivateSubnetAZ1c":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "AvailabilityZone":"us-east-1c",
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "SubnetAZ1c",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Name",
                  "Value":"PrivateSubnetAZ1c"
               }
            ]
         }
      },
      "PublicSubnetAZ1d":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "AvailabilityZone":"us-east-1d",
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "SubnetAZ1d",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Name",
                  "Value":"PublicSubnetAZ1d"
               }
            ]
         }
      },
      "PublicSubnetAZ1e":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "AvailabilityZone":"us-east-1e",
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Fn::FindInMap":[  
                  "SubnetConfig",
                  "SubnetAZ1e",
                  "CIDR"
               ]
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               },
               {  
                  "Key":"Name",
                  "Value":"PublicSubnetAZ1e"
               }
            ]
         }
      },
      "InternetGateway":{  
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{  
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               }
            ]
         }
      },
      "InternetGatewayAttachment":{  
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "InternetGatewayId":{  
               "Ref":"InternetGateway"
            }
         }
      },
      "NAT":{  
         "DependsOn":"InternetGatewayAttachment",
         "Type":"AWS::EC2::NatGateway",
         "Properties":{  
            "AllocationId":{  
               "Fn::GetAtt":[  
                  "NATEIP",
                  "AllocationId"
               ]
            },
            "SubnetId":{  
               "Ref":"PublicSubnetAZ1d"
            }
         }
      },
      "NATEIP":{  
         "Type":"AWS::EC2::EIP",
         "Properties":{  
            "Domain":"vpc"
         }
      },
      "NATRoute":{  
         "Type":"AWS::EC2::Route",
         "Properties":{  
            "RouteTableId":{  
               "Ref":"PrivateRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "NatGatewayId":{  
               "Ref":"NAT"
            }
         }
      },
      "PublicRouteTable":{  
         "Type":"AWS::EC2::RouteTable",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Name",
                  "Value":"Public Route Table"
               }
            ]
         }
      },
      "InternetGatewayRoute":{  
         "DependsOn":"InternetGatewayAttachment",
         "Type":"AWS::EC2::Route",
         "Properties":{  
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{  
               "Ref":"InternetGateway"
            }
         }
      },
      "PrivateRouteTable":{  
         "Type":"AWS::EC2::RouteTable",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Application",
                  "Value":{  
                     "Ref":"AWS::StackName"
                  }
               }
            ]
         }
      },
      "PrivateSubnetAZ1aRouteTableAssociation":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnetAZ1a"
            },
            "RouteTableId":{  
               "Ref":"PrivateRouteTable"
            }
         }
      },
      "PrivateSubnetAZ1bRouteTableAssociation":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnetAZ1b"
            },
            "RouteTableId":{  
               "Ref":"PrivateRouteTable"
            }
         }
      },
      "PrivateSubnetAZ1cRouteTableAssociation":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnetAZ1c"
            },
            "RouteTableId":{  
               "Ref":"PrivateRouteTable"
            }
         }
      },
      "PublicSubnetAZ1dRouteTableAssociation":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnetAZ1d"
            },
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            }
         }
      },
      "PublicSubnetAZ1eRouteTableAssociation":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnetAZ1e"
            },
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            }
         }
      }      
   },
   "Outputs":{  
         "VPC":{  
            "Description":"VPC",
            "Value":{  
               "Ref":"VPC"
            }
         },
         "PrivateSubnetAZ1a":{  
            "Description":"Private Subnet AZ1a",
            "Value":{  
               "Ref":"PrivateSubnetAZ1a"
            }
         },
         "PrivateSubnetAZ1b":{  
            "Description":"Private Subnet AZ1b",
            "Value":{  
               "Ref":"PrivateSubnetAZ1b"
            }
         },
         "PrivateSubnetAZ1c":{  
            "Description":"Private Subnet AZ1c",
            "Value":{  
               "Ref":"PrivateSubnetAZ1c"
            }
         },
         "PublicSubnetAZ1d":{  
            "Description":"Public Subnet AZ1d",
            "Value":{  
               "Ref":"PublicSubnetAZ1d"
            }
         },
         "PublicSubnetAZ1e":{  
            "Description":"Public Subnet AZ1e",
            "Value":{  
               "Ref":"PublicSubnetAZ1e"
            }
         }
      }
}
